syntax = "proto3";
import "user.proto";

package pb;

option go_package = "github.com/kwalter26/udemy-simplebank/pb";

message CreateUserRequest {
  string username = 1;
  string full_name = 2;
  string email = 3;
  string password = 4;
}

message CreateUserResponse {
  User user = 1;
}

